Fixed chat send animation on safari

--- a/scss/chat.scss
+++ b/scss/chat.scss
@@ -24,12 +24,15 @@
             color: $black;
             font-family: 'CocogoosePro', sans-serif;
             font-weight: normal;
-            &:not(:root:root) { /* SAFARI */
-                letter-spacing: -2px;
-            }
+
             font-size: 22px;
             margin: 0;
             margin-bottom: 7px;
+            &:not(.error) {
+                &:not(:root:root) { /* SAFARI */
+                    letter-spacing: -1px;
+                }
+            }
             &.required::after {
                 content: ' *';
                 font-family: 'Roboto', sans-serif;
@@ -92,12 +95,14 @@
 .send {
     @include no-select();
     cursor: pointer;
-    border-radius: 5px;
-    background: $blue;
     display: inline-block;
     overflow: visible;
     position: relative;
+    width: 600px;
+    padding: 10px 0;
+    overflow: hidden;
     .wrapper {
+        display: inline-block;
         color: $white;
         font-family: 'CocogoosePro-Regular', sans-serif;
         font-size: 20px;
@@ -105,6 +110,8 @@
         padding: 10px 50px 10px 20px;
         overflow: hidden;
         position: relative;
+        border-radius: 5px;
+        background-color: $blue;
         &::before {
             content: '';
             position: absolute;
@@ -121,7 +128,7 @@
         &::after {
             content: '';
             position: absolute;
-            right: -10px;
+            left: 0;
             top: 12px;
             width: 20px;
             height: 20px;
@@ -129,7 +136,7 @@
             background-position: center;
             background-size: contain;
             background-repeat: no-repeat;
-            transform: translate(-23px, 0px);
+            transform: translate(92px, 0px);
             transform-origin: bottom left;
             opacity: 1;
         }
@@ -137,26 +144,16 @@
     &::before {
         content: '';
         position: absolute;
-        right: -10px;
-        top: 12px;
+        left: 0;
+        top: 22px;
         width: 20px;
         height: 20px;
         background-image: url('../img/chat/plane-blue.png');
         background-position: center;
         background-size: contain;
         background-repeat: no-repeat;
-        transform: translate(-23px, 0px);
+        transform: translate(92px, 0px);
         transform-origin: bottom left;
-        z-index: -1;
-    }
-    &::after {
-        content: '';
-        position: absolute;
-        right: 0;
-        top: -10px;
-        width: calc(100% + 70px);
-        height: calc(100% + 20px);
-        background: $white;
         z-index: -1;
     }
     &--animate {
@@ -184,8 +181,8 @@
     }
     &--blank {
         cursor: default;
-        background-color: $white;
         .wrapper {
+            background-color: $white;
             padding-right: 0px;
             padding-left: 0px;
             font-size: 25px;
@@ -196,22 +193,22 @@
 
 @keyframes plane {
     0% {
-        transform: translate(-23px, 0);
+        transform: translate(92px, 0);
     },
     10% {
-        transform: translate(-30px, 0) rotate(-10deg);
+        transform: translate(85px, 0) rotate(-10deg);
     },
     20% {
-        transform: translate(200px, 0px) rotate(5deg) scale(1.5);
+        transform: translate(315px, 0px) rotate(5deg) scale(1.5);
     },
     50% {
-        transform: translate(200px, -25px) rotate(180deg) scale(1.5);
+        transform: translate(315px, -25px) rotate(180deg) scale(1.5);
     },
     90% {
-        transform: translate(-160px, -40px) rotate(180deg) scale(3);
+        transform: translate(-55px, -40px) rotate(180deg) scale(3);
     },
     100% {
-        transform: translate(-160px, -40px) rotate(180deg) scale(3);
+        transform: translate(-55px, -40px) rotate(180deg) scale(3);
     }
 }
 
